# trees

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.py
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
config/: config.yaml
include/glad/: glad.h
libs/: install_easy3d.sh
src/: CMakeLists.txt  bud.cpp  bud.hpp  config.hpp.in  environment.cpp  environment.hpp  glad.c  main.cpp  marker.cpp  marker.hpp  markers.cpp  markers.hpp  node.cpp  node.hpp  tree.cpp  tree.hpp  window.cpp  window.hpp
test/: constexpr_tests.cpp  tests.cpp
